# small_world_propensity

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  small_world_propensity.m  testing.ipynb
.github/workflows/: pre-commit.yml  publish-to-pypi.yml  python-app.yml  update_version_and_changelog.sh
small_world_propensity/: __init__.py  small_world_propensity.py
tests/: test_small_world_propensity.py
