[tool.poetry]
name = "small-world-propensity"

version = "0.0.3"

description = "A package designed to calculate the small-world propensity of a weighted, undirected network. Translated from the MATLAB version featured in Muldoon et al."
authors = [
    "Ryan Daniels",
]
license = "GPL-3.0-or-later3"
repository = "https://github.com/alan-turing-institute/netts"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
keywords = ["networks", "graph theory", "small-world"]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^1.24.3"
networkx = "^3.1"
pandas = "^2.0.2"
python-igraph = "^0.10.4"
tqdm = "^4.65.0"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
safety = "^1.10.3"
flake8 = "^3.9.2"
pylint = "^2.9.6"
mypy = "^0.910"
pytest = "^6.2.4"
pre-commit = "^2.14.0"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
devtools = {extras = ["pygments"], version = "^0.8.0"}
black = "^22.3.0"
mkdocs-click = "^0.7.0"
mkdocs-material = "^8.2.13"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "without_cache: marks tests to run that require no netts dependencies cached (deselect with '-m \"not without_cache\"')",
    "ci_only: marks tests that should only run on ci (deselect with '-m \"not ci_only\"')",
]

[tool.black]
line-length = 160
include = '\.pyi?$'
exclude = '''
/(
      .eggs
    | .git
    | .hg
    | .mypy_cache
    | .tox
    | .env
    | _build
    | buck-out
    | build
    | dist
  )/
  '''

[tool.isort]
profile = "black"
line_length = 160
multi_line_output = 3
include_trailing_comma = true
virtual_env = ".env"
skip = ".eggs, .git, .hg, .mypy_cache, .tox, .env, _build, buck-out, build, dist"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
