[tool.poetry]
name = "small-world-propensity"
version = "0.0.13"
description = "A small python package designed to calculate the small-world propensity of a weighted, undirected network. Translated from the MATLAB version featured in Muldoon et al."
authors = ["Ryan Daniels"]
repository = "https://github.com/rkdan/small_world_propensity"
license = "GPL-3.0-only"
readme = "README.md"
packages = [{include = "small_world_propensity"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
pandas = "^2.0.2"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
python-semantic-release = "^7.34.4"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
      .eggs
    | .git
    | .hg
    | .mypy_cache
    | .tox
    | .env
    | _build
    | buck-out
    | build
    | dist
  )/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
virtual_env = ".env"
skip = ".eggs, .git, .hg, .mypy_cache, .tox, .env, _build, buck-out, build, dist"

[tool.semantic_release]
version_variable = [
    "small_world_propensity/__init__.py:__version__",
    "pyproject.toml:version",
]
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default
version_source = "tag"                   # versioning source

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
